--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ executors:
       - image: alpine/git
   golang:
     docker:
-      - image: circleci/golang:1.8
+      - image: circleci/golang:1.10
 
 # Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
 # See: https://circleci.com/docs/2.0/orb-intro/
@@ -103,6 +103,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
+            - .git
             - docs
             - VERSION
             - CHANGELOG.md
