--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:fix": "npm run lint -- --fix",
     "postinstall": "npm run postinstall:jest-extended",
     "postinstall:jest-extended": "cd node_modules/jest-extended && npm i --production --ignore-scripts",
-    "precommit": "npm run lint && npm run test:unit && npm run test:e2e && npm run build && npm run doc",
+    "precommit": "npm run lint && npm run test:unit && npm run test:e2e && npm run build && npm run doc && rm -rf docs",
     "prepare": "husky install",
     "release:do": "standard-version -a",
     "release:trigger": "git commit --allow-empty -m \"ci(release): trigger release\"",
