--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,12 +81,12 @@ jobs:
       - run:
           name: Maybe abort ci
           command: |
-            if ! sh ./.circleci/release-type.sh; then
+            if ! ./.circleci/release-type.sh; then
               curl --request POST \
                 --url https://circleci.com/api/v2/workflow/$CIRCLE_WORKFLOW_ID/cancel \
                 --header "Circle-Token: ${CIRCLE_TOKEN}"
             else
-              echo "Should release $(sh ./.circleci/release-type.sh)"
+              echo "Should release $(./.circleci/release-type.sh)"
             fi
       - run:
           name: Check files
@@ -104,7 +104,7 @@ jobs:
       - run: 
           name: Run standard-version
           command: |
-            release_type="$(sh ./.circleci/release-type.sh)"
+            release_type="$(./.circleci/release-type.sh)"
             if [ -z ${release_type} ]; then
               npm run release -- --no-verify
             else
