--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,12 +23,12 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - node-cache-{{ .Branch }}-{{ checksum "package-lock.json" }}
-            - node-cache-{{ .Branch }}
-            - node-cache
+            - v1--npm-ci--{{ .Branch }}--{{ checksum "package-lock.json" }}
+            - v1--npm-ci--{{ .Branch }}
+            - v1--npm-ci
       - run: npm ci
       - save_cache:
-          key: node-cache-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          key: v1--npm-ci-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
             - ~/.npm
       - persist_to_workspace:
@@ -106,9 +106,9 @@ jobs:
           command: |
             release_type="$(bash ./scripts/ci/release-type.sh)"
             if [ -z ${release_type} ]; then
-              npm run release -- --no-verify
+              npm run release:do -- --no-verify
             else
-              npm run release -- --prerelease ${release_type} --no-verify
+              npm run release:do -- --prerelease ${release_type} --no-verify
             fi
       - persist_to_workspace:
           root: .
@@ -141,14 +141,14 @@ jobs:
           at: .
       - restore_cache:
           keys:
-            - go-mod-{{ .Branch }}
-            - go-mod-{{ .Branch }}
-            - go-mod
+            - v1-go-mod-{{ .Branch }}
+            - v1-go-mod-{{ .Branch }}
+            - v1-go-mod
       - run:
           name: Get GHR
           command: go get github.com/tcnksm/ghr
       - save_cache:
-          key: go-mod-{{ .Branch }}
+          key: v1--go-mod--{{ .Branch }}
           paths:
             - /go/pkg/mod
       - run:
