--- a/package.json
+++ b/package.json
@@ -27,18 +27,21 @@
     "lint": "eslint \"{,{src,test}/**/}*.{j,t}s\"",
     "lint:commit-message:current": "commitlint -E HUSKY_GIT_PARAMS",
     "lint:fix": "npm run lint -- --fix",
+    "lint:quick": "npm run lint -- --cache",
     "postinstall": "npm run postinstall:jest-extended",
     "postinstall:jest-extended": "cd node_modules/jest-extended && npm i --production --ignore-scripts",
-    "precommit": "npm run lint && npm run test:unit && npm run test:e2e && npm run build && npm run doc && (git checkout HEAD docs || :)",
+    "precommit": "npm run lint:quick && npm run test:unit:quick && npm run test:e2e:quick && npm run build && npm run doc && (git checkout HEAD docs || :)",
     "prepare": "husky install",
     "release:do": "standard-version -a",
     "release:trigger": "git commit --allow-empty -m \"ci(release): trigger release\"",
     "release:trigger:alpha": "git commit --allow-empty -m \"ci(release): trigger alpha release\"",
     "test:e2e": "jest --config ./jest.config.e2e.js",
     "test:e2e:ci": "JEST_JUNIT_OUTPUT_NAME=junit.e2e.xml npm run test:e2e -- --all --ci --reporters=default --reporters=jest-junit",
+    "test:e2e:quick": "npm run test:e2e -- --only-changed",
     "test:unit": "jest --config ./jest.config.js",
     "test:unit:ci": "JEST_JUNIT_OUTPUT_NAME=junit.unit.xml npm run test:unit -- --all --ci --coverage --reporters=default --reporters=jest-junit",
-    "test:unit:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./jest.config.js -- "
+    "test:unit:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./jest.config.js -- ",
+    "test:unit:quick": "npm run test:unit -- --only-changed"
   },
   "commitlint": {
     "extends": [
