ci(renovate): customize config

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,15 @@
 {
   "extends": [
-    "config:base"
+    "config:base",
+    "npm:unpublishSafe"
+  ],
+  "rangeStrategy": "update-lockfile",
+  "packageRules": [
+    {
+      "matchDepTypes": [
+        "peerDependencies"
+      ],
+      "rangeStrategy": "auto"
+    }
   ]
 }
