ci(renovate): try avoid auto-update of typedoc

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
     "npm:unpublishSafe"
   ],
   "rangeStrategy": "update-lockfile",
+  "ignoreDeps": ["typedoc"],
   "packageRules": [
     {
       "matchDepTypes": [
