ci(renovate): try avoid auto-update of passport

--- a/renovate.json5
+++ b/renovate.json5
@@ -11,6 +11,10 @@
         "peerDependencies"
       ],
       "rangeStrategy": "auto"
+    },
+    { // `passport` is peer of `passport-jwt` & `@nestjs-passport`
+      "matchPackagePatterns": ["passport", "passport-jwt"],
+      "enabled": false
     }
   ]
 }
