ci(renovate): change base branch to develop

--- a/renovate.json5
+++ b/renovate.json5
@@ -3,6 +3,7 @@
     "config:base",
     "npm:unpublishSafe"
   ],
+  "baseBranches": ["develop"],
   "rangeStrategy": "update-lockfile",
   "ignoreDeps": ["typedoc"],
   "packageRules": [
