--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,15 +201,50 @@ jobs:
       - run:
           name: Publish package
           command: npm publish
+  git-merge-develop:
+    executor: git
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: Merge to develop
+          command: |
+            git remote set-url origin https://$CIRCLE_PROJECT_USERNAME:$GITHUB_AUTH_SECRET@github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+            git merge $CIRCLE_BRANCH develop -m "ci(auto-merge): auto merge $CIRCLE_BRANCH
+            
+            [skip ci]"
+            git push --set-upstream origin develop
+
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  check: # Workflow ran on all branches except `main` & `develop`
+  renovate: # Workflow ran only on `renovate/*`
+    unless:
+      matches: { pattern: "^renovate/", value: << pipeline.git.branch >> }
+    jobs:
+      - install
+
+      - test:
+          requires:
+            - install
+      - build:
+          requires:
+            - install
+
+      - git-merge-develop:
+          filters:
+            branches:
+              only: main
+          requires:
+            - test
+            - build
+  check: # Workflow ran on all branches except `main`, `develop` and `renovate/*`
     unless:
       or:
         - equal: [ main, << pipeline.git.branch >> ]
         - equal: [ develop, << pipeline.git.branch >> ]
+        - matches: { pattern: "^renovate/", value: << pipeline.git.branch >> }
     jobs:
       - install
       - codeclimate-before
@@ -263,5 +298,11 @@ workflows:
           requires:
             - do-release
       - github-release:
+          requires:
+            - github-push
+      - git-merge-develop:
+          filters:
+            branches:
+              only: main
           requires:
             - github-push
