ci(circleci): try fix github release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,7 +207,8 @@ jobs:
             VERSION=$(cat ./VERSION)
             mkdir /tmp/release
             cp -r ./{dist,src,package.json,package-lock.json,README.md,LICENSE,CHANGELOG.md} /tmp/release
-            ghr -t ${GITHUB_AUTH_SECRET} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} /tmp/release
+            cd /tmp/release
+            ghr -t ${GITHUB_AUTH_SECRET} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./*
   npm-publish:
     executor: node
     steps:
