--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-rxjs": "^3.3.7",
     "eslint-plugin-sort-export-all": "^1.1.1",
+    "expect": "^27.2.4",
     "expect-type": "^0.12.0",
     "express": "^4.17.1",
     "format-package": "^6.1.0",
@@ -99,6 +100,7 @@
     "jest": "^27.2.4",
     "jest-extended": "github:GerkinDev/jest-extended#build/rejects-toThrowWithMessage",
     "jest-junit": "^13.0.0",
+    "jest-matcher-utils": "^27.2.4",
     "lodash": "^4.17.21",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
