--- a/tsconfig.e2e-spec.json
+++ b/tsconfig.e2e-spec.json
@@ -7,6 +7,7 @@
     "extends": "./tsconfig.spec.json",
     "include": [
         "./test/**/*",
-        "./src/**/*"
+        "./src/**/*",
+        "./types/test-extra.d.ts"
     ]
 }
