--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -17,6 +17,7 @@
   ],
   "extends": "./tsconfig.base.json",
   "include": [
-    "./src/**/*"
-  ]
+    "./src/**/*",
+    "./types/test-extra.d.ts"
+  ],
 }
