chore: update all deps, rename @scitizen to @knodes
WEB-136 WEB-137 #comment Rename namespace

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scitizen/nest-casl",
+  "name": "@knodes/nest-casl",
   "version": "0.0.2",
   "description": "A module for managing authorization in your nest application, using casl.",
   "license": "MIT",
@@ -29,8 +29,6 @@
     "lint:commit-message:current": "commitlint -E HUSKY_GIT_PARAMS",
     "lint:fix": "npm run lint -- --fix",
     "lint:quick": "npm run lint -- --cache",
-    "postinstall": "npm run postinstall:jest-extended",
-    "postinstall:jest-extended": "cd node_modules/jest-extended && npm i --production --ignore-scripts",
     "precommit": "npm run lint:quick && npm run test:unit:quick && npm run test:e2e:quick && npm run build && npm run doc && (git checkout HEAD docs || :)",
     "prepare": "husky install",
     "release:do": "standard-version -a",
@@ -69,6 +67,7 @@
     "@casl/ability": "^5.4.3",
     "@commitlint/cli": "^14.0.0",
     "@commitlint/config-conventional": "^14.0.0",
+    "@knodes/eslint-config": "^1.5.1",
     "@nestjs/cli": "^8.1.2",
     "@nestjs/common": "^8.0.9",
     "@nestjs/core": "^8.0.9",
@@ -77,7 +76,6 @@
     "@nestjs/platform-express": "^8.0.9",
     "@nestjs/schematics": "^8.0.3",
     "@nestjs/testing": "^8.0.9",
-    "@scitizen/eslint-config": "^1.5.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.175",
@@ -99,7 +97,7 @@
     "format-package": "^6.1.0",
     "husky": "^7.0.2",
     "jest": "^27.2.4",
-    "jest-extended": "github:GerkinDev/jest-extended#build/rejects-toThrowWithMessage",
+    "jest-extended": "^2.0.0",
     "jest-junit": "^13.0.0",
     "jest-matcher-utils": "^27.2.4",
     "lodash": "^4.17.21",
@@ -113,7 +111,7 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
-    "typedoc": "^0.21.9",
+    "typedoc": "0.21.9",
     "typedoc-plugin-pages-fork": "^0.0.1",
     "typescript": "^4.4.3"
   }
