--- a/package.json
+++ b/package.json
@@ -29,18 +29,15 @@
     "lint:commit-message:current": "commitlint -E HUSKY_GIT_PARAMS",
     "lint:fix": "npm run lint -- --fix",
     "lint:quick": "npm run lint -- --cache",
-    "precommit": "npm run lint:quick && npm run test:unit:quick && npm run test:e2e:quick && npm run build && npm run doc && (git checkout HEAD docs || :)",
-    "prepare": "husky install",
+    "precommit": "npm run lint:quick && npm run test:quick && npm run build && npm run doc && (git checkout HEAD docs || :)",
+    "prepare": "npm run prepare:husky",
+    "prepare:husky": "[ -d ./node_modules/husky ] && husky install || true",
     "release:do": "standard-version -a",
     "release:trigger": "git commit --allow-empty -m \"ci(release): trigger release\"",
     "release:trigger:alpha": "git commit --allow-empty -m \"ci(release): trigger alpha release\"",
-    "test:e2e": "jest --config ./jest.config.e2e.js",
-    "test:e2e:ci": "JEST_JUNIT_OUTPUT_NAME=junit.e2e.xml npm run test:e2e -- --all --ci --reporters=default --reporters=jest-junit",
-    "test:e2e:quick": "npm run test:e2e -- --only-changed",
-    "test:unit": "jest --config ./jest.config.js",
-    "test:unit:ci": "JEST_JUNIT_OUTPUT_NAME=junit.unit.xml npm run test:unit -- --all --ci --coverage --reporters=default --reporters=jest-junit",
-    "test:unit:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./jest.config.js -- ",
-    "test:unit:quick": "npm run test:unit -- --only-changed"
+    "test": "jest --config ./jest.config.js",
+    "test:ci": "JEST_JUNIT_OUTPUT_NAME=junit.xml npm run test -- --all --ci --reporters=default --reporters=jest-junit",
+    "test:quick": "npm run test -- --only-changed"
   },
   "commitlint": {
     "extends": [
@@ -65,54 +62,57 @@
   },
   "devDependencies": {
     "@casl/ability": "^5.4.3",
-    "@commitlint/cli": "^14.0.0",
-    "@commitlint/config-conventional": "^14.0.0",
-    "@knodes/eslint-config": "^1.5.1",
-    "@nestjs/cli": "^8.1.2",
-    "@nestjs/common": "^8.0.9",
-    "@nestjs/core": "^8.0.9",
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@knodes/eslint-config": "^1.6.3",
+    "@knodes/typedoc-plugin-code-blocks": "^0.22.2",
+    "@knodes/typedoc-plugin-pages": "^0.22.2",
+    "@nestjs/cli": "^8.2.2",
+    "@nestjs/common": "^8.4.0",
+    "@nestjs/core": "^8.4.0",
     "@nestjs/jwt": "^8.0.0",
-    "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.0.9",
-    "@nestjs/schematics": "^8.0.3",
-    "@nestjs/testing": "^8.0.9",
+    "@nestjs/passport": "^8.2.1",
+    "@nestjs/platform-express": "^8.4.0",
+    "@nestjs/schematics": "^8.0.7",
+    "@nestjs/testing": "^8.4.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.175",
-    "@types/node": "^16.10.2",
+    "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.179",
+    "@types/node": "^17.0.21",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "ajv": "^8.10.0",
+    "eslint": "^8.10.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^37.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsdoc": "^37.9.6",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-rxjs": "^4.0.0",
-    "eslint-plugin-sort-export-all": "^1.1.1",
-    "expect": "^27.2.4",
+    "eslint-plugin-rxjs": "^5.0.2",
+    "eslint-plugin-sort-export-all": "^1.2.1",
+    "expect": "^27.5.1",
     "expect-type": "^0.13.0",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
     "format-package": "^6.1.0",
-    "husky": "^7.0.2",
-    "jest": "^27.2.4",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
     "jest-junit": "^13.0.0",
-    "jest-matcher-utils": "^27.2.4",
+    "jest-matcher-utils": "^27.5.1",
     "lodash": "^4.17.21",
-    "passport": "^0.4.1",
+    "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
+    "prettier": "^2.5.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.3.1",
-    "standard-version": "^9.3.1",
-    "supertest": "^6.1.6",
-    "ts-jest": "^27.0.5",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.2.1",
-    "tsconfig-paths": "^3.11.0",
-    "typedoc": "0.21.9",
-    "typedoc-plugin-pages-fork": "^0.0.1",
-    "typescript": "^4.4.3"
+    "rxjs": "^7.5.4",
+    "standard-version": "^9.3.2",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.7",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.13.0",
+    "typedoc": "^0.22.12",
+    "typescript": "^4.5.5"
   }
 }
